--- a/css/main.css
+++ b/css/main.css
@@ -53,86 +53,169 @@
             margin-left: 5%;
             margin-right: 5%;
             margin-bottom: 20px;
-        } 
+        }
+ @media (max-width: 700px) {
+      .hero > .row {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 20px;
+        padding-right: 20px;
+                }
+            }
         .content {
             padding-top: 80px;
             padding-bottom: 80px;
             background-color: #fff;
         }
-            .content > .row {
+        .content > .row {
                 display: inline-block;
                 width: 1000px;
                 margin-left: calc( (100% - 1000px) / 2 );
                 margin-right: calc( (100% - 1000px) / 2 );
             }
-                .content > .row > .left {
+        .content > .row > .left {
                     display: inline-block;
                     width: 50%;
                     float: left;
                 }
-                .content > .row > .right {
+        .content > .row > .right {
                     display: inline-block;
                     width: 40%;
-                    float: right;
+                    float: right;       
                 }
-                    .content > .row h3 {
+        .content > .row h3 {
                         display: inline-block;
                         width: 100%;
                         margin-bottom: 30px;
                         text-transform: uppercase;
-                    }
-                    .content > .row p {
+                }
+        .content > .row p {
                         display: inline-block;
                         width: 100%;
                         margin-bottom: 30px;
                         font-size: 16px;
                         line-height: 20px;
+                }
+        .content > .row p > a {
+                        color: #EA1E63;
+                        text-decoration: none;
+                }
+            
+@media (max-width: 1100px) {
+    .content > .row {
+         width: 800px;
+        margin-left: calc( (100% - 800px) / 2 );
+        margin-right: calc( (100% - 800px) / 2 );
+     }
+    }  
+ @media (max-width: 900px) {
+    .content > .row {
+      width: 600px;
+      margin-left: calc( (100% - 600px) / 2 );
+      margin-right: calc( (100% - 600px) / 2 );
+     }
+    .content > .row > .left {
+      width: 100%;
+      margin-bottom: 80px;
+     }
+   .content > .row > .right {
+     width: 100%;
+          }
+        }
+ @media (max-width: 700px) {
+        .content > .row {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 20px;
+        padding-right: 20px;
+         }   
+    }
+
+ footer {
+    padding-bottom: 60px;
+    text-align: center;
+ }
+        footer > .row {
+            display: inline-block;
+            width: 1000px;
+            margin-left: calc( (100% - 1000px) / 2 );
+            margin-right: calc( (100% - 1000px) / 2 );
+            }
+        footer > .row > .socials {
+            display: inline-block;
+            width: 100%;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #fff;
+            }
+        footer > .row > .footer-content {
+            display: inline-block;
+            width: 600px;
+            color: rgba(255, 255, 255, 0.75);
+             }
+             
+        footer .footer-content > img {
+            display: inline-block;
+            margin-bottom: 20px;
+            }
+        footer .footer-content > .text-list {
+            display: inline-block;
+            width: 100%;
+            }
+        footer .text-list > .text {
+            display: inline-block;
+            }
+        footer .text-list > .text:nth-child(2) {
+            padding-left: 10px;
+            padding-right: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
+            border-left: 2px solid #fff;
+            border-right: 2px solid #fff;
+            }
+        footer .footer-content a {
+            color: #fff;
+            } 
+        
+@media (max-width: 1100px) {
+        footer > .row {
+            width: 800px;
+            margin-left: calc( (100% - 800px) / 2 );
+            margin-right: calc( (100% - 800px) / 2 );
                     }
-                        .content > .row p > a {
-                            color: #EA1E63;
-                            text-decoration: none;
-                        } 
-                        footer {
-                            padding-bottom: 60px;
-                            text-align: center;
-                        }
-                            footer > .row {
-                                display: inline-block;
-                                width: 1000px;
-                                margin-left: calc( (100% - 1000px) / 2 );
-                                margin-right: calc( (100% - 1000px) / 2 );
-                            }
-                                footer > .row > .socials {
-                                    display: inline-block;
-                                    width: 100%;
-                                    margin-bottom: 20px;
-                                    border-bottom: 2px solid #fff;
-                                }
-                                footer > .row > .footer-content {
-                                    display: inline-block;
-                                    width: 600px;
-                                    /* color: #fff; */
-                                    color: rgba(255, 255, 255, 0.75);
-                                }
-                                    footer .footer-content > img {
-                                        display: inline-block;
-                                        margin-bottom: 20px;
-                                    }
-                                    footer .footer-content > .text-list {
-                                        display: inline-block;
-                                        width: 100%;
-                                    }
-                                        footer .text-list > .text {
-                                            display: inline-block;
-                                        }
-                                            footer .text-list > .text:nth-child(2) {
-                                                padding-left: 10px;
-                                                padding-right: 10px;
-                                                margin-left: 10px;
-                                                margin-right: 10px;
-                                                border-left: 2px solid #fff;
-                                                border-right: 2px solid #fff;
-                                            }
-                                            footer .footer-content a {
-                                                color: #fff;
-                                            } 
+             }
+@media (max-width: 900px) {           
+        footer > .row {
+            width: 600px;
+            margin-left: calc( (100% - 600px) / 2 );
+            margin-right: calc( (100% - 600px) / 2 );
+                     }
+            }
+ @media (max-width: 700px) {
+        footer > .row {
+            width: 100%;
+            margin-left: 0;
+            margin-right: 0;
+            padding-left: 20px;
+            padding-right: 20px;
+            }
+        footer > .row > .footer-content {
+            width: 100%;
+                }
+        footer .text-list {
+            margin-bottom: 20px;
+                }
+        footer .text-list > .text {
+            width: 100%;
+                }
+        footer .text-list > .text:nth-child(2) {
+            padding-left: 0;
+            padding-right: 0;
+            margin-left: 0;
+            margin-right: 0;
+            border: none;
+                }
+        } 
+                                           
+                        
