Back to top #12

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,12 @@
             width: 1000px;
             margin-left: calc( (100% - 1000px) / 2 );
             margin-right: calc( (100% - 1000px) / 2 );
+            position: relative;
+            }
+            footer > .row >.btn.fa {
+                position: absolute;
+                top: -30px;
+                right: -18px;
             }
         footer > .row > .socials {
             display: inline-block;
@@ -150,7 +156,6 @@
             margin-bottom: 20px;
             border-bottom: 2px solid #fff;
             }
-
             footer > .row > .socials > a {
                 display: inline-block;
                 width: 40px;
@@ -202,7 +207,10 @@
             margin-left: calc( (100% - 600px) / 2 );
             margin-right: calc( (100% - 600px) / 2 );
                      }
+            footer > .row > .btn.fa {
+                display: none;
             }
+        }
  @media (max-width: 700px) {
         footer > .row {
             width: 100%;
