--- a/css/button.css
+++ b/css/button.css
@@ -11,13 +11,16 @@
     text-decoration: none;
     cursor: pointer;
 }
+
     .btn:hover {
         box-shadow: 0 1px 4px #0009;
     }
     
     .btn.btn-round {
+        float: right;
         border-radius: 25px;
     }
     .btn.btn-round.fa {
         padding: 15px;
     }
+  
